# pokemon-truecolor

./: LICENSE  README.md  pokemon.py  requirements.txt  setup.cfg  utils.py
PokemonTrueColor/: pokemon.py
