[metadata]
name = pokemon_truecolor
version = 0.0.1
author = Raffi Utama
description = For visualize random pokemon in terminal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/raffifu/pokemon-truecolor
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True